syntax = "proto3";

package calculator;
option go_package = "./calculator/calculatorpb";

message SumRequest {
  int32 num1 = 1;
  int32 num2 = 2;
}

message SumResponse {
  int32 sum = 1;
}

message FactorizeRequest {
  int32 number = 1;
}

message FactorResponse {
  int32 factor = 1;
}

service SumService {
  rpc Sum(SumRequest) returns (SumResponse) {};

  rpc Factorize(FactorizeRequest) returns (stream  FactorResponse) {};
}